compliant to JDK1.4